WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258582
Fix non scrollable check for interaction regions
https://bugs.webkit.org/show_bug.cgi?id=258582
Summary
Fix non scrollable check for interaction regions
Tim Nguyen (:ntim)
Reported
2023-06-27 11:22:25 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2023-06-27 11:22:45 PDT
Comment hidden (hidden, obsolete)
rdar://107265123
Tim Nguyen (:ntim)
Comment 2
2023-06-27 11:25:36 PDT
rdar://110652649
Tim Nguyen (:ntim)
Comment 3
2023-06-27 11:29:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15342
EWS
Comment 4
2023-06-30 03:22:13 PDT
Committed
265648@main
(d3747cf8f4f7): <
https://commits.webkit.org/265648@main
> Reviewed commits have been landed. Closing PR #15342 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug