Fix non scrollable check for interaction regions https://bugs.webkit.org/show_bug.cgi?id=258582 rdar://110652649

Reviewed by Simon Fraser.

overflow: hidden containers can be scrolled programatically, but from the user perspective, they are not scrollable.

* LayoutTests/interaction-region/hover-style-expected.txt:
* LayoutTests/interaction-region/hover-style.html:
* Source/WebCore/page/InteractionRegion.cpp:
(WebCore::interactionRegionForRenderedRegion):

Canonical link: https://commits.webkit.org/265648@main